@@ -176,7 +176,7 @@ int main(int argc, char**argv){
 
   ctx = dfsch_make_context();
 
-  dfsch_ctx_define(ctx,"version",dfsch_make_string("0.2dev"));
+  dfsch_ctx_define(ctx,"version",dfsch_make_string(VERSION));
 
   dfsch_load_register(ctx);
 
@@ -252,6 +252,7 @@ int main(int argc, char**argv){
     for (i=0; i<argc-optind; i++){
       dfsch_vector_set(args, i, dfsch_make_string(argv[optind+i]));
     }
+    dfsch_ctx_define(ctx, "argv", args);
 
     ret = dfsch_load_scm(ctx, argv[optind]);
     if (dfsch_object_exception_p(ret)){
